welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
def fonctionTest(){
if(estFaceMur()==true&&getDirection() == Direction.NORD){return true}else{return false}
}

while (fontionTest==false){
if(estFaceMur){
	if(getDirection() == Direction.EST){gauche(); avance(); droite();}
	else{if (getDirection() == Direction.OUEST){droite();avance();gauche();}}
}else{avance();}
}
}

